--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ header{
 /* -------------- */
 .blurb{
     width:800px;
-    position: absolute;
+    position: relative;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -596,6 +596,8 @@ and (max-width: 600px)
 ---------------
  */
 {
+   
+  
     .navBar{
         margin-right:6.8rem; 
         margin-bottom:0px;
@@ -611,10 +613,14 @@ and (max-width: 600px)
     /* Heading
     -------------
      */
-
+    .blurb{
+        top: 25%;
+      
+    }
      .blurb h2{
         font-size:200%;
         margin-left:12rem;
+        
         
      }
 
@@ -631,6 +637,198 @@ and (max-width: 600px)
       margin-bottom:50px;
 
     }
+
+    /* About
+    ----------- */
+    .about-me-headline h1{
+     margin-top:-3rem;
+     font-size:200%;
+    
+    }
+
+    .head-shot{
+        border: 1px solid #bdbdbd;
+        height:15rem;
+        width:15rem;
+        border-radius: 50%;  
+        margin-top:0px;
+        margin-left:7.5rem;
+          
+    }
+    h1::after{
+        display: block;
+        height: 2px;
+        background-color:#FFEB3B;
+        content: " ";
+        width: 100px;
+        margin: 0 auto;
+        margin-top: 30px; 
+    }
+
+    .about-me-blurb{
+        border:none; 
+        padding:0 1rem;
+        margin-right:5rem;
+        
+    }
+   
+
+    .about-me{
+        display:flex;
+        flex-direction: column;
+    }
+
+    .about{
+        height:100vh;
+    }
+
+
+
+
+/* Projects
+------------ */
+.projects {
+ background:orange;
+  
+}
+
+
+.project-1 .icons{
+    border:none;
+    display:flex;
+}
+.project-description{
+    margin-top:15rem;
+    margin-left:5em;
+    margin-right:3em;
+  
+  }
+  .project-description h4{
+    font-size:150%;
+
+}
+/* ------------- */
+/* ---Contact--- */
+/* ----------- */
+
+.contact{
+    background-color:#ffffff;
+    display:grid;
+  
+
+    
+}
+.contact-form{
+    margin-left:-3.5rem;
+    
+   
+   
+} 
+
+.contact .headline{
+   font-size:60%;
+   margin-top:6rem;
+
+}
+
+input[type=text],
+input[type=email],
+textarea {
+width:60%;
+padding:10px;
+border-radius: 3px;
+border: 1px solid#ccc;
+font-size:15px;
+font-weight: 100;
+}
+
+
+.span-1-of-2{
+    display:flex;
+    justify-content: center;
+    margin-bottom:1rem;
+}
+
+.span-1-of3{
+margin-left:10rem;
+}
+.mess{
+height:200px;
+margin-bottom:1%;
+}
+
+#name{
+    margin-top:2%;
+}
+
+
+*:focus{
+    outline: none;
+}
+
+input[value]{
+    font-size:80%;
+}
+
+.heading{
+color:#212121;
+margin-left:5rem;
+}
+
+.send-btn{
+    background-color:#FFEB3B;
+    color:#212121;
+    padding:15px 40px;
+
+    width:150px;
+    border-radius:5px;
+    
+
+}
+
+.btm-btn{
+    display:flex;
+    justify-content:center;
+    margin-top:3%;
+    font-size:120%;
+}
+
+
+
+
+
+/* ------------- */
+/* ---FOOTER--- */
+/* ----------- */
+
+footer{
+    height:15vh;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr)
+    
+    
+}
+.copy{
+   margin:0;
+ 
+}
+.copy p{
+    
+    display:none;
+}
+ .social-links{
+   margin-right:3rem;
+
+   
+} 
+
+.links{
+    color:#BDBDBD;
+    font-size: 3rem;
+    margin-right:6rem;
+    opacity: 0.9;
+} 
+
 
 
 }  
