--- a/styles.css
+++ b/styles.css
@@ -848,7 +848,7 @@ and (max-width: 414px)
     .about-me-headline h1{
      margin-top:-2rem;
      font-size:200%;
-     margin-right:.5rem;
+     margin-right:4.5rem;
      margin-bottom:0;
     
     }
@@ -867,13 +867,21 @@ and (max-width: 414px)
     }
   
 
-    .about-me-blurb {
-    line-height:0px;
-     font-size:50%;
-       
-        
+    .about-me-blurb {     
+        border:none; 
+        padding-left:0;
+        margin-right:5rem;
+        font-size:80%;
+        width:400px;
     }
    
+    p {
+        padding-left: 2rem;
+        font-weight: 400;
+        letter-spacing: 1px;
+        word-spacing: 2px;
+        line-height: 30px;
+    }
 
    
 
