--- a/styles.css
+++ b/styles.css
@@ -943,6 +943,14 @@ border: 1px solid#ccc;
 font-size:15px;
 font-weight: 100;
 }
+.send-btn{
+    background-color:#FFEB3B;
+    color:#212121;
+    padding:4px 20px;
+   margin-top:20px;
+    
+
+}
 
 
 /* ------------- */
